--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -103,6 +103,15 @@
     mode: 0755
   tags: installation
 
+# このcapabilityを有効にしておかないと「listen udp 127.0.0.1:53: bind: permission denied」
+# というエラーになってconsulサービスが起動できない
+- name: Set cap_sys_chroot+ep on consul
+  capabilities:
+    path: /usr/local/bin/consul
+    capability: CAP_NET_BIND_SERVICE+ep
+    state: present
+  when: ansible_os_family != 'Windows'
+
 - name: Daemon reload systemd in case the binaries upgraded
   systemd: daemon_reload=yes
   become: true
